Feature: Implement Hybrid Fusion Engine
Added clean_raw_history to extract GPS pings from rawSignals.

Added fuse_layers to merge semantic visits with raw path data.

Updated read_timeline to return both data layers.

Formalized package dependencies in DESCRIPTION and package sentinel.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     leaflet,
     lubridate,
     stringr,
-    tidyr
+    tidyr, 
+    sf
 Suggests: 
     magrittr
 URL: https://github.com/kimbridges/timelinesr
