--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(visualize_geotags)
 export(write_geotags)
 export(write_gps_manifest)
 import(dplyr)
+import(leaflet)
 import(lubridate)
 import(stringr)
 import(tidyr)
